# CPP2018

./: .gitignore  CMakeLists.txt  Pyramid_1.cpp
Ad Hoc/: 3n+1.cpp  AddWithoutPlus.cpp  Josephus.cpp  Joseph’sCousin.cpp  PowerCrisis.cpp  PrimeNumToN.cpp  Queen.cpp  Set.cpp  The Club Ballroom.cpp  TheClubBallroom.cpp  ToCarryOrNoToCarry.cpp
AdHoc/: AlarmClock.cpp  DivisionOfNlogonia.cpp  ExchangingCards.cpp  Josephus.cpp  MusicalLoop.cpp  OpticalReader.cpp  PowerCrisis.cpp  Set.cpp  Sub_Prime.cpp  TheClubBallroom.cpp
Beginner/: AgeIndays.cpp  Area.cpp  Average_3.cpp  Banknotes.cpp  BanknotesAndCoins.cpp  BhaskarasFormula.cpp  Consumption.cpp  Distance.cpp  DistanceBetweenTwo Points.cpp  FuelSpent.cpp  Interval.cpp  SelectionTest1.cpp  SimpleCalculate.cpp  Snack.cpp  Sphere.cpp  TheGreatest.cpp  TimeConversion.cpp
CommonQA/: MergeSort.cpp  WordReverseString.cpp  bubbleSort.c  duplicatesInArray.cpp  reverseWord.cpp
DataStructure/: TDA_Rational.cpp
LightOJ/: lightoj1001.cpp  lightoj1008.cpp  lightoj1010.cpp
Pyramids/: Pyramid_1.cpp  Pyramid_2.cpp  Pyramid_3  Pyramid_3.cpp  Pyramid_4.cpp
STDL/: ReverseString.cpp
Strings/: ContractRevision.cpp  Encryption.cpp  Growing Strings.cpp  LED.cpp
Teach_yourself/: Readme.md  TY_1.3_ex-1.cpp  TY_1.3_ex-2.cpp  TY_1.3_ex-3.cpp
